After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730952 - Missing nullability annotations
Missing nullability annotations
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
unspecified
Other Linux
: Normal normal
: 1.3.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 723910
 
 
Reported: 2014-05-29 18:36 UTC by Evan Nemerson
Modified: 2014-06-28 08:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
introspection: add some missing nullability annotations (10.06 KB, patch)
2014-05-29 18:36 UTC, Evan Nemerson
none Details | Review
introspection: add (nullable) annotations to return values (7.73 KB, patch)
2014-06-11 23:44 UTC, Evan Nemerson
committed Details | Review
introspection: add missing allow-none annotations (3.14 KB, patch)
2014-06-11 23:46 UTC, Evan Nemerson
committed Details | Review

Description Evan Nemerson 2014-05-29 18:36:22 UTC
Created attachment 277478 [details] [review]
introspection: add some missing nullability annotations

This is just what I found based on looking for "%NULL" in documentation strings, I'm sure there are others.
Comment 1 Evan Nemerson 2014-06-11 23:44:08 UTC
Created attachment 278295 [details] [review]
introspection: add (nullable) annotations to return values

Splitting up the patch.  This one is for the return values only.
Comment 2 Evan Nemerson 2014-06-11 23:46:09 UTC
Created attachment 278296 [details] [review]
introspection: add missing allow-none annotations

Adding allow-none to arguments.  Note that I got rid of the (optional) annotation, so it should work with older versions of g-i.

Feel free to squash these into a single commit, I'm just trying to make them easier to review.
Comment 3 Sebastian Dröge (slomo) 2014-06-26 17:09:55 UTC
commit cecc2cb4ff0b66270da77ad1511f26591ec8947f
Author: Evan Nemerson <evan@nemerson.com>
Date:   Wed Jun 11 16:42:08 2014 -0700

    introspection: add missing allow-none annotations
    
    https://bugzilla.gnome.org/show_bug.cgi?id=730952

commit 34e6ac3b9f52f74edb2d661b48fd5a2a8751b5be
Author: Evan Nemerson <evan@nemerson.com>
Date:   Wed Jun 11 16:38:36 2014 -0700

    introspection: add (nullable) annotations to return values
    
    https://bugzilla.gnome.org/show_bug.cgi?id=730952