introspection: add (nullable) annotations to return values

https://bugzilla.gnome.org/show_bug.cgi?id=730952